[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reach-tools"
version = "0.1.0.dev0"
authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]
description = "Working with river reach data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis>=2.4.1",
    "numpy>=1.7",
    "html2text",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["reach_tools"]
